# actix-boilerplate

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
dao/: Cargo.toml
service/: Cargo.toml
service/src/: lib.rs
src/: main.rs
